package ejercicio3;

public interface NumAleatorio { //Interfaz para generar números aleatorios
    int generarNumAleatorio(int min, int max);
}
