package ejercicio3;

public interface NumeroMayor {  //Interfaz para buscar el número mayor de una tabla
    int buscarNumeroMayor(int[] numeros);
}
