@startuml

interface NumAleatorio {
    +generarNumAleatorio(int min, int max): int
}

interface NumeroMayor {
    +buscarNumeroMayor(int[] numeros): int
}

class GeneradorAleatorio implements NumAleatorio {
    +generarNumAleatorio(int minimo, int maximo): int
}

class BuscadorMayor implements NumeroMayor {
    +buscarNumeroMayor(int[] tabla): int
}

class GeneradorTablaAleatoria {
    -NumAleatorio numAleatorio
    +GeneradorTablaAleatoria(NumAleatorio numAleatorio)
    +crearTablaAleatoria(int tamano, int minimo, int maximo): int[]
}

class ManipulacionTablas {
    +main(String[] args): void
}

GeneradorAleatorio ..|> NumAleatorio
BuscadorMayor ..|> NumeroMayor
GeneradorTablaAleatoria --> "uses" NumAleatorio
ManipulacionTablas --> "creates" GeneradorTablaAleatoria
ManipulacionTablas --> "uses" NumeroMayor

@enduml
